# detecting-defective-solar-panels-with-computer-vision-and-thermography

./: .gitignore  2025-04-29 computer vision with solar panels.py  33_solar_defect_detection_blog.md  33_solar_defect_detection_blog_linkedin_post.md  33_solar_defect_visualizations.py  README.md  article.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: blog-33-solar-defect-detection.md
legacy/: 2025-04-29 computer vision with solar panels.py  README.md
scripts/: run.py
solar_panel_cv/: __init__.py  cli.py  clip.py  config.py  context.py  data.py  datasets.py  download_dataset.py  download_dataset_2.py  download_dataset_3.py  fine_tuning.py  matplotlib_inline_jupyter_only.py  matplotlib_inline_jupyter_only_2.py  models.py  pipeline.py  plotting.py  set_image_dimensions.py  set_image_dimensions_2.py  set_image_dimensions_3.py  set_image_dimensions_4.py  set_image_dimensions_5.py  set_image_dimensions_6.py  set_up_binary_classification_directories.py  steps.py  training.py
solar_panel_cv/steps/: __init__.py  step_01_explore_kaggle_dataset.py  step_02_build_vgg16_and_explore.py  step_03_clip_zero_shot_kaggle.py  step_04_train_multiclass_checkpoint.py  step_05_fine_tune_multiclass.py  step_06_train_mobilenet_faulty_panel.py  step_07_train_multiclass_faulty_panel.py  step_08_extract_archive.py  step_08b_prepare_binary_dataset.py  step_09_compare_mobilenet_clip.py  step_10_train_binary_classifier.py  step_11_clip_zero_shot_faulty_panel.py  step_12_clip_binary_evaluation.py  step_13_clip_binary_dataset_evaluation.py  (+2 more)
tests/: test_config.py
