[project]
name = "detecting-defective-solar-panels-with-computer-vis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
